[gd_scene load_steps=111 format=3 uid="uid://domcgy8cnu58f"]

[ext_resource type="Script" path="res://Scripts/CharacterBody2D.gd" id="1_udora"]
[ext_resource type="Texture2D" uid="uid://du554nbshl7th" path="res://Assets/candle_size1-Sheet.png" id="2_7ovjg"]
[ext_resource type="Texture2D" uid="uid://cgqxxcuk66phb" path="res://Assets/candle_size2-Sheet.png" id="3_qco0r"]
[ext_resource type="Texture2D" uid="uid://b5g7ek78atmiw" path="res://Assets/candle_size3-Sheet.png" id="4_k1fxy"]
[ext_resource type="Texture2D" uid="uid://crq31dkmgi6vb" path="res://Assets/dead_candle.png" id="5_wsheg"]
[ext_resource type="AudioStream" uid="uid://bl5o1qacxsqj1" path="res://Assets/Audio/Footsteps/footstep_concrete_001.ogg" id="7_pk1gv"]
[ext_resource type="AudioStream" uid="uid://c12rj17imxuj8" path="res://Assets/Audio/Footsteps/footstep_concrete_002.ogg" id="8_0l1g8"]
[ext_resource type="AudioStream" uid="uid://cpec0dt04kyln" path="res://Assets/Audio/Actions/error_006.ogg" id="9_ejafu"]
[ext_resource type="AudioStream" uid="uid://bfi80ekvpfadl" path="res://Assets/Audio/Actions/error_005.ogg" id="9_lpmbc"]
[ext_resource type="AudioStream" uid="uid://cyvmc4pnq8jkf" path="res://Assets/Audio/Actions/error_008.ogg" id="10_damq1"]

[sub_resource type="Gradient" id="Gradient_ych10"]
offsets = PackedFloat32Array(0.0722348, 0.670429)
colors = PackedColorArray(1, 1, 1, 1, 0.133333, 0.133333, 0.133333, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xs23g"]
gradient = SubResource("Gradient_ych10")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.512821, 0.508547)

[sub_resource type="Animation" id="Animation_r8li8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.44]
}

[sub_resource type="Animation" id="Animation_bl7lq"]
resource_name = "blaze"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.44, 1.92]
}

[sub_resource type="Animation" id="Animation_6qut7"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.44, 0.12]
}

[sub_resource type="Animation" id="Animation_bqqxw"]
resource_name = "flicker"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-0.5, -0.5), Vector2(-0.5, 1), Vector2(2.23517e-08, 1.04308e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.44, 1.48, 1.33, 1.48]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_35ai5"]
_data = {
"RESET": SubResource("Animation_r8li8"),
"blaze": SubResource("Animation_bl7lq"),
"dead": SubResource("Animation_6qut7"),
"flicker": SubResource("Animation_bqqxw")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_uwaf5"]
atlas = ExtResource("2_7ovjg")
region = Rect2(0, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uok35"]
atlas = ExtResource("2_7ovjg")
region = Rect2(32, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvq2o"]
atlas = ExtResource("2_7ovjg")
region = Rect2(64, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7an7"]
atlas = ExtResource("2_7ovjg")
region = Rect2(96, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pfsd"]
atlas = ExtResource("2_7ovjg")
region = Rect2(128, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw4uo"]
atlas = ExtResource("2_7ovjg")
region = Rect2(160, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7doa"]
atlas = ExtResource("2_7ovjg")
region = Rect2(192, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_665hm"]
atlas = ExtResource("2_7ovjg")
region = Rect2(224, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsa35"]
atlas = ExtResource("2_7ovjg")
region = Rect2(256, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nqxu"]
atlas = ExtResource("2_7ovjg")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfboq"]
atlas = ExtResource("2_7ovjg")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6lmt"]
atlas = ExtResource("2_7ovjg")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luy76"]
atlas = ExtResource("2_7ovjg")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3ydi"]
atlas = ExtResource("2_7ovjg")
region = Rect2(0, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f8t3"]
atlas = ExtResource("2_7ovjg")
region = Rect2(32, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n1kj"]
atlas = ExtResource("2_7ovjg")
region = Rect2(64, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aae0"]
atlas = ExtResource("2_7ovjg")
region = Rect2(96, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp10g"]
atlas = ExtResource("2_7ovjg")
region = Rect2(128, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwal2"]
atlas = ExtResource("2_7ovjg")
region = Rect2(160, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ongdj"]
atlas = ExtResource("2_7ovjg")
region = Rect2(192, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8mpg"]
atlas = ExtResource("2_7ovjg")
region = Rect2(224, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhmwo"]
atlas = ExtResource("2_7ovjg")
region = Rect2(256, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8j85"]
atlas = ExtResource("2_7ovjg")
region = Rect2(288, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_50vfa"]
atlas = ExtResource("2_7ovjg")
region = Rect2(320, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yptgf"]
atlas = ExtResource("2_7ovjg")
region = Rect2(352, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mxml"]
atlas = ExtResource("2_7ovjg")
region = Rect2(384, 128, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pqup"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwaf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uok35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvq2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7an7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pfsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw4uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7doa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_665hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsa35")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nqxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfboq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6lmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luy76")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3ydi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f8t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n1kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aae0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp10g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwal2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ongdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8mpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhmwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8j85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50vfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yptgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mxml")
}],
"loop": true,
"name": &"shrink",
"speed": 13.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6vn0"]
size = Vector2(9, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0gvoh"]
size = Vector2(10, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_3borm"]
atlas = ExtResource("3_qco0r")
region = Rect2(0, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kdnc"]
atlas = ExtResource("3_qco0r")
region = Rect2(32, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3sto"]
atlas = ExtResource("3_qco0r")
region = Rect2(64, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_de46b"]
atlas = ExtResource("3_qco0r")
region = Rect2(96, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v7rt"]
atlas = ExtResource("3_qco0r")
region = Rect2(128, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exo2i"]
atlas = ExtResource("3_qco0r")
region = Rect2(160, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_coskx"]
atlas = ExtResource("3_qco0r")
region = Rect2(192, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_83ik7"]
atlas = ExtResource("3_qco0r")
region = Rect2(224, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5pde"]
atlas = ExtResource("3_qco0r")
region = Rect2(256, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2col"]
atlas = ExtResource("3_qco0r")
region = Rect2(288, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvboi"]
atlas = ExtResource("3_qco0r")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2gpf"]
atlas = ExtResource("3_qco0r")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb6kh"]
atlas = ExtResource("3_qco0r")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjxyu"]
atlas = ExtResource("3_qco0r")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mdbc"]
atlas = ExtResource("3_qco0r")
region = Rect2(0, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ype8a"]
atlas = ExtResource("3_qco0r")
region = Rect2(32, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m02l"]
atlas = ExtResource("3_qco0r")
region = Rect2(64, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcjmo"]
atlas = ExtResource("3_qco0r")
region = Rect2(96, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d87ry"]
atlas = ExtResource("3_qco0r")
region = Rect2(128, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_12o4p"]
atlas = ExtResource("3_qco0r")
region = Rect2(160, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmtnf"]
atlas = ExtResource("3_qco0r")
region = Rect2(192, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubklb"]
atlas = ExtResource("3_qco0r")
region = Rect2(224, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8uor"]
atlas = ExtResource("3_qco0r")
region = Rect2(256, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5in3"]
atlas = ExtResource("3_qco0r")
region = Rect2(288, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f6h6"]
atlas = ExtResource("3_qco0r")
region = Rect2(320, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1spt"]
atlas = ExtResource("3_qco0r")
region = Rect2(352, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynnex"]
atlas = ExtResource("3_qco0r")
region = Rect2(384, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h11xi"]
atlas = ExtResource("3_qco0r")
region = Rect2(416, 128, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7j6v2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3borm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kdnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3sto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de46b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v7rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exo2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coskx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83ik7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5pde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2col")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvboi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2gpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb6kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjxyu")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mdbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ype8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m02l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcjmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d87ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12o4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmtnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubklb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8uor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5in3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f6h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1spt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynnex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h11xi")
}],
"loop": true,
"name": &"shrink",
"speed": 13.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1b71j"]
size = Vector2(9, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bh5ef"]
size = Vector2(9, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_sliop"]
atlas = ExtResource("4_k1fxy")
region = Rect2(0, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua6r6"]
atlas = ExtResource("4_k1fxy")
region = Rect2(32, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv6xx"]
atlas = ExtResource("4_k1fxy")
region = Rect2(64, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mbdh"]
atlas = ExtResource("4_k1fxy")
region = Rect2(96, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqaeo"]
atlas = ExtResource("4_k1fxy")
region = Rect2(128, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba447"]
atlas = ExtResource("4_k1fxy")
region = Rect2(160, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ljb"]
atlas = ExtResource("4_k1fxy")
region = Rect2(192, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxyrf"]
atlas = ExtResource("4_k1fxy")
region = Rect2(224, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_no7t0"]
atlas = ExtResource("4_k1fxy")
region = Rect2(256, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0v4p"]
atlas = ExtResource("4_k1fxy")
region = Rect2(288, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn56g"]
atlas = ExtResource("4_k1fxy")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evkag"]
atlas = ExtResource("4_k1fxy")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y803s"]
atlas = ExtResource("4_k1fxy")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8bc8"]
atlas = ExtResource("4_k1fxy")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m26t7"]
atlas = ExtResource("4_k1fxy")
region = Rect2(0, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwe1l"]
atlas = ExtResource("4_k1fxy")
region = Rect2(32, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_phoyb"]
atlas = ExtResource("4_k1fxy")
region = Rect2(64, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_acx82"]
atlas = ExtResource("4_k1fxy")
region = Rect2(96, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq5wd"]
atlas = ExtResource("4_k1fxy")
region = Rect2(128, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0hea"]
atlas = ExtResource("4_k1fxy")
region = Rect2(160, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ma1"]
atlas = ExtResource("4_k1fxy")
region = Rect2(192, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayshf"]
atlas = ExtResource("4_k1fxy")
region = Rect2(224, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qu3h"]
atlas = ExtResource("4_k1fxy")
region = Rect2(256, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bquhd"]
atlas = ExtResource("4_k1fxy")
region = Rect2(288, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_psma1"]
atlas = ExtResource("4_k1fxy")
region = Rect2(320, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlgtx"]
atlas = ExtResource("4_k1fxy")
region = Rect2(352, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6air4"]
atlas = ExtResource("4_k1fxy")
region = Rect2(384, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qosv"]
atlas = ExtResource("4_k1fxy")
region = Rect2(416, 128, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_adwqj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sliop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua6r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv6xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mbdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqaeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba447")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ljb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxyrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no7t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0v4p")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn56g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evkag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y803s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8bc8")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m26t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwe1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phoyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acx82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq5wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0hea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ma1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayshf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qu3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bquhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psma1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlgtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6air4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qosv")
}],
"loop": true,
"name": &"shrink",
"speed": 13.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bcawc"]
size = Vector2(9, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8veo7"]
size = Vector2(9, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aeu5q"]
size = Vector2(7, 12.5)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tq6re"]
streams_count = 2
stream_0/stream = ExtResource("7_pk1gv")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_0l1g8")
stream_1/weight = 1.0

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 2
platform_on_leave = 2
platform_floor_layers = 4294901761
script = ExtResource("1_udora")
SPEED = 170.0
slide_speed = 20.0
turn_speed = 18.0
jump_height = 60.0
jump_time_to_peak = 0.25
jump_time_to_descent = 0.2

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -8)
color = Color(0.976471, 0.847059, 0.698039, 1)
energy = 1.44
blend_mode = 2
shadow_enabled = true
texture = SubResource("GradientTexture2D_xs23g")
texture_scale = 0.7

[node name="LightAnimationPlayer" type="AnimationPlayer" parent="PointLight2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_35ai5")
}
autoplay = "flicker"

[node name="Size1" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -25)
sprite_frames = SubResource("SpriteFrames_5pqup")
animation = &"shrink"
autoplay = "idle"
frame = 2
frame_progress = 0.734297

[node name="Flame" type="Area2D" parent="Size1"]
position = Vector2(-1, 14)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Size1/Flame"]
visible = false
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_w6vn0")

[node name="CollisionShapeSize1" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_0gvoh")

[node name="Size2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, -25)
sprite_frames = SubResource("SpriteFrames_7j6v2")
animation = &"shrink"
autoplay = "idle"
frame_progress = 0.526036

[node name="Flame" type="Area2D" parent="Size2"]
visible = false
position = Vector2(0, -3)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Size2/Flame"]
visible = false
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_1b71j")

[node name="CollisionShapeSize2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -9)
shape = SubResource("RectangleShape2D_bh5ef")

[node name="Size3" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, -25)
sprite_frames = SubResource("SpriteFrames_adwqj")
animation = &"shrink"
autoplay = "idle"
frame = 13
frame_progress = 0.431184

[node name="Flame" type="Area2D" parent="Size3"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Size3/Flame"]
visible = false
position = Vector2(-0.5, -20)
shape = SubResource("RectangleShape2D_bcawc")

[node name="CollisionShapeSize3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -17)
shape = SubResource("RectangleShape2D_8veo7")

[node name="Dead" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -25)
texture = ExtResource("5_wsheg")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1.25)
shape = SubResource("RectangleShape2D_aeu5q")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="DownsizeTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageCoolDown" type="Timer" parent="."]
wait_time = 0.5

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_tq6re")
volume_db = -4.499
pitch_scale = 1.44

[node name="StepSpeed" type="Timer" parent="Footsteps"]
wait_time = 0.1
one_shot = true

[node name="DownsizeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ejafu")

[node name="UpsizeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lpmbc")

[node name="DeadSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_damq1")
